--- a/web/index.html
+++ b/web/index.html
@@ -11,11 +11,11 @@
       background-color: #111;
       color: #f4f4f4;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
       height: 100vh;
       margin: 0;
-      flex-direction: column;
     }
     h1 {
       font-size: 3rem;
@@ -24,11 +24,25 @@
     p {
       font-size: 1.2rem;
       color: #aaa;
+      margin-bottom: 2rem;
+    }
+    a {
+      background: #00ffcc;
+      color: #111;
+      padding: 12px 24px;
+      text-decoration: none;
+      border-radius: 4px;
+      font-weight: bold;
+      transition: background 0.3s ease;
+    }
+    a:hover {
+      background: #00ddb3;
     }
   </style>
 </head>
 <body>
   <h1>Echoes</h1>
   <p>Your memory. Your tone. Your truth — made digital.</p>
+  <a href="bootloader.html">Launch Echoes</a>
 </body>
 </html>
