--- a/index.html
+++ b/index.html
@@ -2,22 +2,61 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Echoes Demo</title>
   <style>
     body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+      background-color: #101010;
+      color: #eeeeee;
+      font-family: 'Helvetica Neue', sans-serif;
       display: flex;
-      justify-content: center;
+      flex-direction: column;
       align-items: center;
-      height: 100vh;
-      background-color: #f4f4f4;
-      color: #333;
+      justify-content: center;
+      padding: 60px 20px;
+      min-height: 100vh;
+    }
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 20px;
+      text-align: center;
+    }
+    #chat {
+      width: 100%;
+      max-width: 720px;
+      background: #1a1a1a;
+      padding: 24px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.05);
+      min-height: 320px;
+      overflow-y: auto;
+      white-space: pre-wrap;
+    }
+    input, button {
+      font-size: 1rem;
+      margin-top: 12px;
+      padding: 12px;
+      border-radius: 6px;
+    }
+    input {
+      width: 70%;
+      background: #333;
+      color: #fff;
+      border: 1px solid #555;
+    }
+    button {
+      background: #00ffcc;
+      color: #000;
+      border: none;
+      cursor: pointer;
+      margin-left: 8px;
     }
   </style>
 </head>
 <body>
   <h1>Welcome to Echoes Demo</h1>
+  <div id="chat">Your messages will appear here...</div>
+  <input type="text" placeholder="Type a message..." />
+  <button>Send</button>
 </body>
 </html>
