--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     }
   </style>
 </head>
-<script>
+  <script>
   const input = document.querySelector('input');
   const button = document.querySelector('button');
   const chat = document.getElementById('chat');
@@ -66,21 +66,37 @@
     chat.scrollTop = chat.scrollHeight;
   }
 
-  function sendMessage() {
+  async function sendMessage() {
     const text = input.value.trim();
     if (!text) return;
+
     appendMessage('You', text);
     input.value = '';
-    setTimeout(() => {
-      appendMessage('Echoes', `(${text.length} characters felt…)`);
-    }, 700);
+
+    try {
+      const response = await fetch('https://secure-vault.gregzed.repl.co/api/generate', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ prompt: text })
+      });
+
+      const data = await response.json();
+      if (data.response) {
+        appendMessage('Echoes', data.response);
+      } else {
+        appendMessage('Echoes', '(no response received)');
+      }
+    } catch (err) {
+      appendMessage('Echoes', 'error reaching Echoes server…');
+    }
   }
 
   button.addEventListener('click', sendMessage);
   input.addEventListener('keydown', e => {
     if (e.key === 'Enter') sendMessage();
   });
-</script><body>
+</script>
+  <body>
   <h1>Welcome to Echoes Demo</h1>
   <div id="chat">Your messages will appear here...</div>
   <input type="text" placeholder="Type a message..." />
