--- a/web/index.html
+++ b/web/index.html
@@ -1,48 +1,65 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Echoes: The Memory Engine</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Echoes</title>
   <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
     body {
-      font-family: sans-serif;
-      background-color: #111;
-      color: #f4f4f4;
+      height: 100dvh;
+      background-color: #0f0f0f;
+      color: #fff;
+      font-family: 'Helvetica Neue', sans-serif;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      height: 100vh;
-      margin: 0;
+      padding: 2rem;
     }
+
     h1 {
-      font-size: 3rem;
-      margin-bottom: 0.5rem;
+      font-size: 2rem;
+      margin-bottom: 1rem;
+      letter-spacing: 1px;
     }
-    p {
-      font-size: 1.2rem;
-      color: #aaa;
-      margin-bottom: 2rem;
+
+    input[type="text"] {
+      padding: 10px;
+      width: 80vw;
+      max-width: 500px;
+      border-radius: 6px;
+      border: 1px solid #333;
+      background-color: #1a1a1a;
+      color: #fff;
+      font-size: 1rem;
+      margin-bottom: 1rem;
     }
-    a {
-      background: #00ffcc;
-      color: #111;
-      padding: 12px 24px;
-      text-decoration: none;
-      border-radius: 4px;
-      font-weight: bold;
-      transition: background 0.3s ease;
+
+    button {
+      background-color: #1e1e1e;
+      color: #fff;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 6px;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: background-color 0.2s ease;
     }
-    a:hover {
-      background: #00ddb3;
+
+    button:hover {
+      background-color: #333;
     }
   </style>
 </head>
 <body>
   <h1>Echoes</h1>
-  <p>Your memory. Your tone. Your truth — made digital.</p>
-  <a href="bootloader.html">Launch Echoes</a>
+  <input type="text" placeholder="Ask Echoes something..." />
+  <button>Send</button>
 </body>
 </html>
