--- a/index.html
+++ b/index.html
@@ -2,114 +2,64 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Echoes Demo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Echoes</title>
   <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
     body {
-      background-color: #101010;
-      color: #eeeeee;
+      height: 100dvh;
+      background-color: #0f0f0f;
+      color: #fff;
       font-family: 'Helvetica Neue', sans-serif;
       display: flex;
       flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-      padding: 60px 20px;
-      min-height: 100vh;
-    }
-    h1 {
-      font-size: 2.5rem;
-      margin-bottom: 20px;
-      text-align: center;
-    }
-    #chat {
-      width: 100%;
-      max-width: 720px;
-      background: #1a1a1a;
-      padding: 24px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(255, 255, 255, 0.05);
-      min-height: 320px;
-      max-height: 500px;
-      overflow-y: auto;
-      white-space: pre-wrap;
-    }
-    .input-row {
-      display: flex;
       justify-content: center;
-      width: 100%;
-      max-width: 720px;
-      margin-top: 20px;
+      align-items: center;
+      padding: 2rem;
     }
-    input, button {
-      font-size: 1rem;
-      padding: 12px;
+
+    h1 {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+      letter-spacing: 1px;
+    }
+
+    input[type="text"] {
+      padding: 10px;
+      width: 80vw;
+      max-width: 500px;
       border-radius: 6px;
-    }
-    input {
-      flex: 1;
-      background: #333;
+      border: 1px solid #333;
+      background-color: #1a1a1a;
       color: #fff;
-      border: 1px solid #555;
-      margin-right: 8px;
+      font-size: 1rem;
+      margin-bottom: 1rem;
     }
+
     button {
-      background: #00ffcc;
-      color: #000;
+      background-color: #1e1e1e;
+      color: #fff;
       border: none;
+      padding: 10px 20px;
+      border-radius: 6px;
+      font-size: 1rem;
       cursor: pointer;
+      transition: background-color 0.2s ease;
+    }
+
+    button:hover {
+      background-color: #333;
     }
   </style>
 </head>
 <body>
-  <h1>Welcome to Echoes Demo</h1>
-  <div id="chat"></div>
-  <div class="input-row">
-    <input id="input" type="text" placeholder="Type a message…" />
-    <button id="send">Send</button>
-  </div>
-
-  <script>
-    const input = document.getElementById('input');
-    const button = document.getElementById('send');
-    const chat = document.getElementById('chat');
-
-    function appendMessage(sender, text) {
-      const message = document.createElement('div');
-      message.innerHTML = `<strong>${sender}:</strong> ${text}`;
-      message.style.marginBottom = '12px';
-      chat.appendChild(message);
-      chat.scrollTop = chat.scrollHeight;
-    }
-
-    async function sendMessage() {
-      const text = input.value.trim();
-      if (!text) return;
-
-      appendMessage('You', text);
-      input.value = '';
-
-      try {
-        const response = await fetch('https://secure-vault.gregzed.repl.co/api/generate', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ prompt: text })
-        });
-
-        const data = await response.json();
-        if (data.response) {
-          appendMessage('Echoes', data.response);
-        } else {
-          appendMessage('Echoes', '(no response)');
-        }
-      } catch (err) {
-        appendMessage('Echoes', 'error connecting to server');
-      }
-    }
-
-    button.addEventListener('click', sendMessage);
-    input.addEventListener('keydown', e => {
-      if (e.key === 'Enter') sendMessage();
-    });
-  </script>
+  <h1>Echoes</h1>
+  <input type="text" placeholder="Ask Echoes something..." />
+  <button>Send</button>
 </body>
 </html>
