--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     }
 
     button {
-      background-color: #1e1e1e;
+      background-color: #2b2b2b;
       color: #fff;
       border: none;
       padding: 10px 20px;
@@ -53,12 +53,12 @@
     }
 
     button:hover {
-      background-color: #333;
+      background-color: #3a3a3a;
     }
   </style>
 </head>
 <body>
-  <h1>Echoes</h1>
+  <h1>Welcome to Echoes</h1>
   <input type="text" placeholder="Ask Echoes something..." />
   <button>Send</button>
 </body>
